<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_to_tracks"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:text="@string/track_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_to_albums"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/album_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_to_artist"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/artist_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_to_playlist"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/playlist_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_to_radio"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/radio_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_to_podcasts"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/podcast_text"
            android:textSize="24sp" />
    </LinearLayout>
</HorizontalScrollView>